[gd_scene load_steps=26 format=3 uid="uid://bayttf12xyhcj"]

[ext_resource type="Texture2D" uid="uid://bqjxdqkggqseb" path="res://Mech_Stone.png" id="1_0ewhg"]
[ext_resource type="Script" path="res://golem_boss.gd" id="1_nonsc"]
[ext_resource type="PackedScene" uid="uid://baykuvdac4r1h" path="res://arm_projectile.tscn" id="2_elrhq"]
[ext_resource type="PackedScene" uid="uid://0fqri6frejci" path="res://golem_pulse.tscn" id="2_rhvh7"]
[ext_resource type="AudioStream" uid="uid://lkuawtljm2gl" path="res://sounds/hurt_c_08-102842.mp3" id="3_mbh1y"]
[ext_resource type="PackedScene" uid="uid://bf3tockuky6vq" path="res://lazer.tscn" id="4_3jnwh"]
[ext_resource type="Shader" path="res://Hit_Flash.gdshader" id="5_7hw21"]
[ext_resource type="AudioStream" uid="uid://23bpeiccdvr0" path="res://sounds/lazer_charging.mp3" id="8_21pao"]
[ext_resource type="AudioStream" uid="uid://dmh2bet7fe1io" path="res://sounds/laser_burst.mp3" id="9_tubgk"]
[ext_resource type="AudioStream" uid="uid://cc6r3pp77john" path="res://sounds/Golem_shield.mp3" id="10_gpif6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_umyqi"]
resource_local_to_scene = true
shader = ExtResource("5_7hw21")
shader_parameter/active = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_ln2q3"]
resource_name = "Body_glow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10, 17]
}

[sub_resource type="Animation" id="Animation_jd7wa"]
resource_name = "Face_glow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [50, 56]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_cn5so"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_spnlt"]
resource_name = "Melee_attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [40, 46]
}

[sub_resource type="Animation" id="Animation_xvydm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yshiq"]
resource_name = "Sleep"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [30, 37]
}

[sub_resource type="Animation" id="Animation_qa3ej"]
resource_name = "arm_cannon"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.85),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20, 28]
}

[sub_resource type="Animation" id="Animation_t2hq8"]
resource_name = "armor"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [60, 69]
}

[sub_resource type="Animation" id="Animation_ey31o"]
resource_name = "de_armor"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [69, 60]
}

[sub_resource type="Animation" id="Animation_rt5jb"]
resource_name = "death"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [70, 83]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xbffc"]
_data = {
"Body_glow": SubResource("Animation_ln2q3"),
"Face_glow": SubResource("Animation_jd7wa"),
"Idle": SubResource("Animation_cn5so"),
"Melee_attack": SubResource("Animation_spnlt"),
"RESET": SubResource("Animation_xvydm"),
"Sleep": SubResource("Animation_yshiq"),
"arm_cannon": SubResource("Animation_qa3ej"),
"armor": SubResource("Animation_t2hq8"),
"de_armor": SubResource("Animation_ey31o"),
"death": SubResource("Animation_rt5jb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdnst"]
size = Vector2(19, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_7vbk1"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3fsc7"]
radius = 40.1123

[node name="Golem_Boss" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_nonsc")
projectile_scene = ExtResource("2_elrhq")
pulse = ExtResource("2_rhvh7")
lazer = ExtResource("4_3jnwh")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_umyqi")
position = Vector2(1, -20)
texture = ExtResource("1_0ewhg")
hframes = 10
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xbffc")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5)
shape = SubResource("RectangleShape2D_gdnst")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mbh1y")
volume_db = 8.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7vbk1")

[node name="shield_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_3fsc7")

[node name="lazer_charging" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_21pao")

[node name="lazer_burst" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_tubgk")

[node name="Golem_shield" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_gpif6")
volume_db = 3.0

[connection signal="timeout" from="shield_timer" to="." method="_on_shield_timer_timeout"]
